--- a/less/my_bootstrap.less
+++ b/less/my_bootstrap.less
@@ -61,3 +61,6 @@
 
 // Utility classes
 @import "utilities.less"; // Has to be last to override when necessary
+
+// My settings
+@import "my_settings.less";
